# DiplomaThesis

Gtk2HsExample/: .project  Gtk2HsExample.cabal  gtk2hsExample.glade
Gtk2HsExample/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage
Gtk2HsExample/src/: Main.hs
HOpenGLExCube/: .project  HOpenGLExCube.cabal
HOpenGLExCube/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
HOpenGLExPoints/: .project  HOpenGLExPoints.cabal
HOpenGLExPoints/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
HOpenGLExPolygon/: .project
HOpenGLExPolygon/.dist-buildwrapper/: .Setup.hs.bwinfo  HOpenGLExPolygon.cabal
HOpenGLExPolygon/.dist-buildwrapper/src/: .Main.hs.bwinfo  .Main.hs.bwusage  Main.hs
