name:           Gtk2HsExample
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Tibor

executable Gtk2HsExample
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                  base >= 4,
                  gtk,
                  cairo
  ghc-options:     -Wall

